[package]
name = "audials-playlist-exporter"
version = "0.1.0"
authors = ["Aleksey Maksimov <makaleks@live.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.3", features = ["glow"]}
rusqlite = "0.25"
rfd = "0.4"
dirs-next = "2"
serde_json = "1.0"
